# qgis-pmtiles

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml
PMTiles/: PMTilesPlugin.py  __init__.py  dialog.py  metadata.txt  requirements.txt
