[project]
name = "qgis-pmtiles"
version = "0.1.0"
description = "QGIS plugin to generate PMTiles."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pmtiles>=3.0.0",
]

[tool.qgis-plugin-ci]
plugin_path = "PMTiles"
github_organization_slug = "hotosm"
project_slug = "qgis-pmtiles"

[dependency-groups]
dev = [
    "ruff>=0.14.1",
    "qgis-plugin-ci>=2.8.10",
]

[tool.ruff]
fix = true
line-length = 88
target-version = "py311"
exclude = [
    ".ruff_cache",
    "PMTiles/__version__.py",
]
[tool.ruff.lint]
select = ["I", "E", "W", "D", "B", "F", "N", "Q"]
ignore = ["N999", "N802"]
[tool.ruff.lint.pydocstyle]
convention = "google"
